--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     "pages/my/my_sell/my_sell",
     "pages/my/my_set/my_set",
     "pages/my/my_set_edit/my_set_edit",
-    "pages/my/my_qrcode/my_qrcode"
+    "pages/my/my_qrcode/my_qrcode",
+    "pages/wx/auth/auth"
   ],
   "window": {
     "backgroundTextStyle": "light",
