--- a/app.json
+++ b/app.json
@@ -59,7 +59,7 @@
   },
   "permission": {
     "scope.userLocation": {
-      "desc": "位置信息将被用来计算您到商户的距离，以便为您提供更好的服务。"
+      "desc": "为给您提供更好的服务，请允许使用您的位置信息。"
     }
   },
   "networkTimeout": {
